<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LCLD</string>
    <string name="Ok" translatable="false">@android:string/ok</string>
    <string name="loading">Loadingâ€¦</string>
    <string name="help">Help</string>
    <string name="copy" translatable="false" tools:override="true">@android:string/copy</string>
    <string name="copied">Copied</string>
    <string name="paste" translatable="false">@android:string/paste</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="Edit">Edit</string>
    <string name="Enable">Enable</string>
    <string name="Delete">Delete</string>
    <string name="Fused">Fused</string>
    <string name="GPS">GPS</string>
    <string name="Cell">Cell</string>
    <string name="export_success">Export succeeded</string>
    <string name="export_failed">Export failed</string>
    <string name="Settings_Import_Success">Import successful</string>
    <string name="Settings_Import_Failed">Import failed</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="request_failed_title">Network request failed</string>
    <string name="request_failed_status_code">Status code</string>
    <string name="request_failed_response_body">Response body</string>
    <string name="request_failed_exception">Exception</string>
    <string name="bottom_nav_commands">Commands</string>
    <string name="bottom_nav_transports">Transport channels</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="Settings_Settings">Settings</string>
    <string name="Settings_LCLDConfig">General</string>
    <string name="Settings_FMDConfig">General</string>
    <string name="Settings_LCLDServer" translatable="false">LCLD Server</string>
    <string name="Settings_FMDServer" translatable="false">LCLD Server</string>
    <string name="Settings_WhiteList">Allowed contacts</string>
    <string name="Settings_OpenCellId" translatable="false">OpenCelliD</string>
    <string name="Settings_Appearance">Appearance</string>
    <string name="Settings_Import">Import settings</string>
    <string name="Settings_Export">Export settings</string>
    <string name="Settings_Logs">Logs</string>
    <string name="Settings_About">About</string>
    <string name="Settings_LCLD_via_Pin_Description">Allows you to communicate with LCLD via a PIN. This allows you to send commands from a phone number that is not in the allowed contacts list.</string>
    <string name="Settings_FMD_via_Pin_Description">Allows you to communicate with LCLD via a PIN. This allows you to send commands from a phone number that is not in the allowed contacts list.</string>
    <string name="Settings_Pin_Not_Backed_Up">Warning: The PIN is not included in the app backup.</string>
    <string name="Settings_Set_Pin">Set PIN</string>
    <string name="Settings_Change_Pin">Change PIN</string>
    <string name="Settings_Enter_Pin">Enter PIN</string>
    <string name="pin">PIN</string>
    <string name="pin_min_length">The PIN must be at least 8 characters. 16 or more are recommended.</string>
    <string name="pin_match_command_keyword">The PIN must not equal one of the commands!</string>
    <string name="Settings_LCLDCommand_Description">The command used to communicate with the LCLD.</string>
    <string name="Settings_FMDCommand_Description">The command used to communicate with the LCLD.</string>
    <string name="Toast_Empty_LCLDCommand">Empty command not allowed, using default.</string>
    <string name="Toast_Empty_FMDCommand">Empty command not allowed, using default.</string>
    <string name="Settings_Ringer_Tone_Description">Select a ringtone for the \"ring\" command.</string>
    <string name="Settings_Select_Ringtone">Select ringtone</string>
    <string name="Settings_no_ringtone_picker">No ringtone picker found!</string>
    <string name="Settings_Lockscreenmessage_Description">Lock screen message:\nWhen locking the device, this message will appear on the lock screen.</string>
    <string name="delete_pw_warning_no_backup">Warning: The password is not included in the app backup.</string>
    <string name="delete_pw_warning_empty">Warning: Deleting won\'t work because the delete password is empty. You must both enable the feature and set a password.</string>
    <string name="Settings_LCLD_Server_General">General</string>
    <string name="Settings_FMD_Server_General">General</string>
    <string name="Settings_LCLD_Server_Server_URL">Server URL:</string>
    <string name="Settings_FMD_Server_Server_URL">Server URL:</string>
    <string name="Settings_LCLD_Server_User_ID">User ID:</string>
    <string name="Settings_FMD_Server_User_ID">User ID:</string>
    <string name="Settings_LCLD_Server_ID_Desc">You need the user ID to find your device with LCLD Server. Write it down and keep it safe.</string>
    <string name="Settings_FMD_Server_ID_Desc">You need the user ID to find your device with LCLD Server. Write it down and keep it safe.</string>
    <string name="Settings_LCLD_Server_Connection_Status">Connection status:</string>
    <string name="Settings_FMD_Server_Connection_Status">Connection status:</string>
    <string name="Settings_LCLD_Server_Connection_Status_Success">Success</string>
    <string name="Settings_FMD_Server_Connection_Status_Success">Success</string>
    <string name="Settings_LCLDServer_Change_Password_Button">Change password</string>
    <string name="Settings_FMDServer_Change_Password_Button">Change password</string>
    <string name="Settings_LCLDServer_Logout_Button">Log out</string>
    <string name="Settings_FMDServer_Logout_Button">Log out</string>
    <string name="Settings_LCLDServer_Logout_Text">Do you really want to log out from your LCLD Server account?</string>
    <string name="Settings_FMDServer_Logout_Text">Do you really want to log out from your LCLD Server account?</string>
    <string name="Settings_LCLDServer_Delete_Account">Delete account</string>
    <string name="Settings_FMDServer_Delete_Account">Delete account</string>
    <string name="Settings_LCLDServer_Alert_DeleteData_Desc">This will delete all data from the server! Are you sure?</string>
    <string name="Settings_FMDServer_Alert_DeleteData_Desc">This will delete all data from the server! Are you sure?</string>
    <string name="Settings_LCLDServer_Unregister_Success">Unregistering and data deletion successful!</string>
    <string name="Settings_FMDServer_Unregister_Success">Unregistering and data deletion successful!</string>
    <string name="Settings_LCLDServer_Push_Title" translatable="false">Push</string>
    <string name="Settings_FMDServer_Push_Title" translatable="false">Push</string>
    <string name="Settings_LCLDServer_Push_Description">Sending commands from LCLD Server to your device requires a UnifiedPush distributor app.</string>
    <string name="Settings_FMDServer_Push_Description">Sending commands from LCLD Server to your device requires a UnifiedPush distributor app.</string>
    <string name="Settings_LCLDServer_Push_Distributor">Distributor: %s</string>
    <string name="Settings_FMDServer_Push_Distributor">Distributor: %s</string>
    <string name="Settings_LCLDServer_Push_Url">Push URL: %s</string>
    <string name="Settings_FMDServer_Push_Url">Push URL: %s</string>
    <string name="Settings_LCLDServer_Push_Open_Help">More information about push</string>
    <string name="Settings_FMDServer_Push_Open_Help">More information about push</string>
    <string name="Settings_LCLDServer_Push_Register">Register</string>
    <string name="Settings_FMDServer_Push_Register">Register</string>
    <string name="Settings_LCLDServer_Push_Register_Again">Register again</string>
    <string name="Settings_FMDServer_Push_Register_Again">Register again</string>
    <string name="Settings_LCLDServer_Push_Install_Sunup">Install Sunup</string>
    <string name="Settings_FMDServer_Push_Install_Sunup">Install Sunup</string>
    <string name="Settings_LCLDServer_Push_Info_Sunup">The recommended UnifiedPush distributor app is Sunup. Sunup is easy set up and uses push servers from Mozilla.</string>
    <string name="Settings_FMDServer_Push_Info_Sunup">The recommended UnifiedPush distributor app is Sunup. Sunup is easy set up and uses push servers from Mozilla.</string>
    <string name="Settings_LCLDServer_Check_Interval_Title">Connectivity check interval</string>
    <string name="Settings_FMDServer_Check_Interval_Title">Connectivity check interval</string>
    <string name="Settings_LCLDServer_Check_Interval_Description">LCLD checks the connectivity to LCLD Server every X hours. Set this to 0 to disable the connectivity check.</string>
    <string name="Settings_FMDServer_Check_Interval_Description">LCLD checks the connectivity to LCLD Server every X hours. Set this to 0 to disable the connectivity check.</string>
    <string name="Settings_LCLDServer_Check_Notify_After_Title">Maximum allowed time without connectivity</string>
    <string name="Settings_FMDServer_Check_Notify_After_Title">Maximum allowed time without connectivity</string>
    <string name="Settings_LCLDServer_Check_Notify_After_Description">LCLD will notify you if the last successful connection to LCLD Server is more than X hours ago. This has no effect if the connectivity check is disabled.</string>
    <string name="Settings_FMDServer_Check_Notify_After_Description">LCLD will notify you if the last successful connection to LCLD Server is more than X hours ago. This has no effect if the connectivity check is disabled.</string>
    <string name="Settings_LCLDServer_Update_Interval_Title">Background location upload interval</string>
    <string name="Settings_FMDServer_Update_Interval_Title">Background location upload interval</string>
    <string name="Settings_LCLDServer_Update_Interval_Description">LCLD uploads the device\'s location every X minutes.</string>
    <string name="Settings_FMDServer_Update_Interval_Description">LCLD uploads the device\'s location every X minutes.</string>
    <string name="Settings_LCLDServer_Update_Interval_Description_Constraint">Values below 15 minutes are not recommended.</string>
    <string name="Settings_FMDServer_Update_Interval_Description_Constraint">Values below 15 minutes are not recommended.</string>
    <string name="Settings_LCLDServer_Location_Type_Title">Location source</string>
    <string name="Settings_FMDServer_Location_Type_Title">Location source</string>
    <string name="Settings_LCLDServer_Location_Type_Description">The source(s) from which the location data is uploaded at regular intervals in the background.\nIf none is selected, no locations are uploaded regularly. (You can still use the web interface to force an upload. This requires push.)</string>
    <string name="Settings_LCLDServer_LOW_BAT_Upload_Title">Upload on low battery</string>
    <string name="Settings_LCLDServer_LOW_BAT_Upload_Description">Upload the location of this device when the battery level goes low.</string>
    <string name="server_connectivity_check_not_enabled_title">Enable the server connectivity check</string>
    <string name="server_connectivity_check_not_enabled_text">LCLD can regularly check whether LCLD Server is still reachable. For privacy reasons this is off by default. But for availability reasons we recommend enabling it.</string>
    <string name="server_version">Server version</string>
    <string name="missing_push_title">Missing UnifiedPush</string>
    <string name="missing_push_description">Without a UnifiedPush distributor app you cannot receive commands from LCLD Server.</string>
</resources>