<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="?android:attr/listDivider" />

    <TextView
        style="@style/LCLD.Text.SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/Settings_LCLDServer_Push_Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Settings_LCLDServer_Push_Description" />

    <LinearLayout
        android:id="@+id/sectionPushDistributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPushDistributor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Settings_LCLDServer_Push_Distributor" />

        <ImageView
            android:id="@+id/buttonOpenPushDistributor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_open_in_new" />

        <ImageView
            android:id="@+id/buttonCopyPushDistributor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_content_copy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionPushUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPushUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Settings_LCLDServer_Push_Url" />

        <ImageView
            android:id="@+id/buttonCopyPushUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_content_copy" />
    </LinearLayout>

    <TextView
        android:id="@+id/textInfoSunup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/Settings_LCLDServer_Push_Info_Sunup" />

    <Button
        android:id="@+id/buttonInstallSunup"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:ems="10"
        android:text="@string/Settings_LCLDServer_Push_Install_Sunup" />

    <Button
        android:id="@+id/buttonRegisterPush"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:ems="10"
        android:text="@string/Settings_LCLDServer_Push_Register_Again" />

    <Button
        android:id="@+id/buttonOpenUnifiedPush"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:ems="10"
        android:text="@string/Settings_LCLDServer_Push_Open_Help" />
</LinearLayout>
